finally fix cursor, whoops

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -35,6 +35,9 @@ $menu = fuzzel
 env = XCURSOR_SIZE,32
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
+env = HYPRCURSOR_THEME,catppuccin-macchiato-mauve-cursors
+env = HYPRCURSOR_SIZE,32
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = gb
