temp fix for wallpaper

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -16,6 +16,7 @@ exec-once = wl-clip-persist --clipboard both
 #exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet
 exec-once = waypaper --restore
+exec-once = sleep 1 && waypaper --restore
 exec-once = sleep 1 && bitwarden
 exec-once = lxqt-policykit-agent
 exec-once = mullvad-gui
