--- a/programs/waybar/config.jsonc
+++ b/programs/waybar/config.jsonc
@@ -140,7 +140,7 @@
 	"custom/lock": {
 		"format": "󰍁 ",
 		"tooltip": false,
-		"on-click": "swaylock"
+		"on-click": "hyprlock"
 	},
 	"custom/power": {
 		"format": " ",
