slightly tweak hyprland config

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 # autumn's hyprland config
 
+source = $HOME/.config/hypr/macchiato.conf
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 monitor=eDP-1,preferred,auto,1.57
@@ -23,9 +25,6 @@ exec-once = mullvad-gui
 exec-once = protonmail-bridge --noninteractive
 
 exec = hyprshade auto
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
 $terminal = kitty
@@ -60,11 +59,11 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 4
+    gaps_out = 8
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $mauve
+    col.inactive_border = $base
 
     layout = dwindle
 
@@ -74,18 +73,14 @@ general {
 
 decoration {
     rounding = 10
-    
+    drop_shadow = no
+
     blur {
         enabled = true
         size = 3
         passes = 2
         noise = 0.15
     }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -136,7 +131,7 @@ device {
 }
 
 xwayland {
-#    force_zero_scaling = true
+    force_zero_scaling = true
 }
 
 # Example windowrule v1
