add a couple window rules

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -141,6 +141,11 @@ xwayland {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+windowrulev2 = fullscreen, class:Slay the Spire # doesn't seem to apply fullscreen through settings
+
+windowrulev2 = float, class:Bitwarden
+windowrulev2 = size 900 600, class:Bitwarden
+
 layerrule = blur, swaync
 layerrule = ignorealpha 0.1, swaync
 
