--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -38,6 +38,8 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 env = HYPRCURSOR_THEME,catppuccin-macchiato-mauve-cursors
 env = HYPRCURSOR_SIZE,32
 
+env = STEAM_FORCE_DESKTOPUI_SCALING,1.5
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = gb
