switch qt theme to breeze

--- a/programs/qtct/qt5ct.conf
+++ b/programs/qtct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/home/autumn/.config/qt5ct/colors/Catppuccin-Macchiato.conf
 custom_palette=true
 icon_theme=Papirus-Dark
 standard_dialogs=default
-style=Fusion
+style=Breeze
 
 [Fonts]
 fixed="Mononoki Nerd Font,12,-1,5,50,0,0,0,0,0"
