add scaling to external monitor

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -5,6 +5,7 @@ source = $HOME/.config/hypr/macchiato.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 monitor=eDP-1,preferred,auto,2
+monitor=desc:LG Electronics LG ULTRAGEAR+ 405NTVSFK287, preferred, auto, 2
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
