add back autoname worspaces

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -24,7 +24,7 @@ exec-once = sleep 1 && bitwarden
 exec-once = lxqt-policykit-agent
 exec-once = mullvad-gui
 exec-once = protonmail-bridge --noninteractive
-#exec-once = hyprland-autoname-workspaces
+exec-once = hyprland-autoname-workspaces
 
 exec = hyprshade auto
 
