initial working KDE setup

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet
+exec-once = blueman-applet
 exec-once = waypaper --restore
 exec-once = sleep 1 && waypaper --restore
 exec-once = sleep 1 && bitwarden
