--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=desc:LG Electronics LG ULTRAGEAR+ 405NTVSFK287, preferred, auto, 2
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
-exec-once = waybar
+exec-once = sleep 0.1 && waybar
 exec-once = swaync
 exec-once = wl-clip-persist --clipboard both
 #exec-once = wl-paste --watch cliphist store
