fix hyprland config

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -78,13 +78,16 @@ general {
 
 decoration {
     rounding = 10
-    drop_shadow = no
 
     blur {
         enabled = true
         size = 3
         passes = 2
         noise = 0.15
+    }
+
+    shadow {
+        enabled = false
     }
 }
 
