hide update notifications

--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -142,6 +142,11 @@ xwayland {
     force_zero_scaling = true
 }
 
+ecosystem {
+    no_update_news = true
+    no_donation_nag = true
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
