--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -10,11 +10,11 @@ monitor=desc:LG Electronics LG ULTRAGEAR+ 405NTVSFK287, preferred, auto, 2
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Some default env vars.
-env = XCURSOR_SIZE,32
-env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 env = HYPRCURSOR_THEME,catppuccin-macchiato-mauve-cursors
 env = HYPRCURSOR_SIZE,32
+env = XCURSOR_SIZE,32
 
 env = STEAM_FORCE_DESKTOPUI_SCALING,2
 
