--- a/programs/hypr/hyprland.conf
+++ b/programs/hypr/hyprland.conf
@@ -10,7 +10,7 @@ monitor=desc:LG Electronics LG ULTRAGEAR+ 405NTVSFK287, preferred, auto, 2
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Some default env vars.
-env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,kde
 
 env = HYPRCURSOR_THEME,catppuccin-macchiato-mauve-cursors
 env = HYPRCURSOR_SIZE,32
